Добавлены методы отправки сообщений sendPrivateMessage() и sendPublicMessage()

--- a/Chat_STL.vcxproj.filters
+++ b/Chat_STL.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Users.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Message.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
